[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
#, "tests/sweettest"]

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
serde = "1"
chrono = "0.4.24"

[workspace.dependencies.invitation_coordinator]
path = "dnas/invitations/zomes/coordinator/invitation"

[workspace.dependencies.invitation_integrity]
path = "dnas/invitations/zomes/integrity/invitation"
