[package]
edition = "2021"
name = "tests"
version = "0.0.1"

[dependencies]

[dev-dependencies]
fixt = "0.1.0"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { version = "0.1.3", default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.24", features = ["full"] }

invitation = { path = "../../dnas/invitations/zomes/coordinator/invitation" }
invitation_integrity = { path = "../../dnas/invitations/zomes/integrity/invitation" }
