[package]
authors = ["manuel.r.puentes.d@gmail.com"]
edition = "2018"
name = "hc_zome_invitations"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_invitations"

[dependencies]
derive_more = "0"
serde = "1"
hdk =  {version = "0.0.120", features = ["encoding"]}
chrono = {version = "0.4.19", features = ["serde"]}
