[package]
name = "invitation"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "invitation"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
invitation_integrity = { workspace = true } 

#[dev-dependencies]
#fixt = "0.1.1"
#futures = { version = "0.3.27", default-features = false }
#hdk = { workspace = true, features = ["encoding", "test_utils"] }
#holochain = { workspace = true, default-features = false, features = [
 # "test_utils"
#] }
#tokio = { version = "1.3", features = ["full"] }
